--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>eConLab</title>
+    <title>Quality Control</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -11,7 +11,10 @@
       rel="stylesheet"
     />
   </head>
-  <body class="hold-transition">
-    <app-root></app-root>
+  <body class="hold-transition" dir="rtl" style="font-family:Cairo !important">
+      <div dir="rtl">
+          <app-root></app-root>
+      </div>
+   
   </body>
 </html>
