- Add Project Map

--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Cairo"
           rel="stylesheet" />
+
+    <script async defer type="text/javascript"
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARYjxnezBeTTArNqLH1wuX_WLVWwOayt8"></script>
 </head>
   <body class="hold-transition" dir="rtl" style="font-family:Cairo !important">
       <div dir="rtl">
